Fix Enumerator::ArithmeticSequence#{each,first,last} with float beginning/step

The algorithm that Enumerator::ArithmeticSequence was using is not
safe for float input.  An arithmetic sequence should result in the
same values as if you were accumulating the values in a while loop:

```ruby
start = 1.0
finish = 2.0
step = 0.123

n = start
values = [start]
while n < finish
  n += step
  values << n
end
```

This didn't hold true for all float values, previously, because the
algorithm previously used was something like:

```
i = (end - start) / step
values = i.times.map do |x|
  start + (step * x)
end
```

For float beginning or step, change the #each algorithm to be the same
as accumulating the values using a loop with repeated addition.  Change

This change is going to have a large adverse performance impact
for float sequences where #first(n)/#last/#last(n) is used where the
array generated by #to_a has a size significantly larger than n.

Fixes [Bug #16612]